// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLaunchView should render app with no engine version 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
      <div>
        <span
          className="alert-icon-bg"
        />
        <span
          className="glyphicon glyphicon-alert"
          title="The app does not specify which nRF Connect version(s) it supports"
        />
      </div>
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        pc-nrfconnect-foobar
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render app with unsupported engine version 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
      <div>
        <span
          className="alert-icon-bg"
        />
        <span
          className="glyphicon glyphicon-alert"
          title="The app only supports nRF Connect 1.x, which does not match your currently installed version"
        />
      </div>
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        pc-nrfconnect-foobar
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render app with upgrade available 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
      <div>
        <span
          className="info-icon-bg"
        />
        <span
          className="glyphicon glyphicon-info-sign"
          title="A new version (v1.2.4) of this app is available, and can be installed from the \\"Add/remove apps\\" screen"
        />
      </div>
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        pc-nrfconnect-foobar
      </h4>
      <p
        className="list-group-item-text"
      >
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render apps sorted by name and isOfficial 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appA
      </h4>
      <p
        className="list-group-item-text"
      >
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appA
      </h4>
      <p
        className="list-group-item-text"
      >
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appA
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appB
      </h4>
      <p
        className="list-group-item-text"
      >
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appB
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
      >
        <span
          className="glyphicon glyphicon-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="btn btn-primary core-btn dropdown-toggle btn btn-default"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
             
            <span
              className="caret"
            />
          </button>
          <ul
            aria-labelledby="bg-nested-dropdown"
            className="dropdown-menu dropdown-menu-right"
            role="menu"
          >
            <li
              className=""
              role="presentation"
            >
              <a
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <button
                  className="btn btn-primary core-btn"
                  disabled={false}
                  onClick={[Function]}
                  title="Create a desktop shortcut for this app"
                >
                  <span
                    className="glyphicon glyphicon-share-alt"
                  />
                  <span
                    className="core-btn-text"
                  >
                    Create shortcut
                  </span>
                </button>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render spinner while retrieving apps 1`] = `
<div
  className="core-loading-apps-spinner"
/>
`;

exports[`AppLaunchView should render without any apps 1`] = `
<div
  className="list-group"
>
  <div>
    <h4>
      Welcome to nRF Connect
    </h4>
    <p>
      To get started, go to 
      <i>
        Add/remove apps
      </i>
       to install some apps.
    </p>
  </div>
</div>
`;
